--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,6 @@ spring.mvc.view.suffix=.jsp
 spring.mvc.hiddenmethod.filter.enabled=true
 spring.datasource.url=jdbc:mysql://localhost:3306/refine
 spring.datasource.username=root
-spring.datasource.password=DTsmoochie1!
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
